--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,14 +1,23 @@
 .projectOverlay {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #d7dce0;
+    padding: 10px;
     position: absolute;
-    top: 50%;
-    left: 25%;
+    bottom: 0%;
+    width: 100%;
 }
 
 .projectName {
     display: inline;
+    text-wrap: nowrap;
+}
+
+.logoAnchor {
+    width: fit-content;
 }
 
 .githubLogoProject {
     max-width: 10%;
-    height: auto;   
+    height: auto; 
 }
